# onyxowl

./: .env.example  .gitignore  ARCHITECTURE.md  DOCKER.md  Makefile  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  api_endpoint.py  download_models.py  privacy_filter.py  pyproject.toml  requirements.txt  setup.py  test_privacy_filter.py
api/: __init__.py  main.py
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
docs/: ARCHITECTURE.md  DOCKER.md  NATS_SESSION_MANAGEMENT.md  PROJECT_STRUCTURE.md  QUICKSTART.md  privacy-filter-guardrail-plan.md
examples/: usage.py
src/privacy_filter/: __init__.py  core.py  gliner_engine.py  models.py  nats_store.py  patterns.py
tests/: __init__.py  conftest.py  test_api.py  test_core.py  test_credit_cards.py  test_crypto.py  test_emails.py  test_nats.py  test_phones.py  test_ssn.py
tests/fixtures/: __init__.py  test_data.py
